--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -19,9 +19,17 @@
     <script src="js/app.js"></script>
     <script src="js/controllers/boards.js"></script>
   </head>
-  <body ng-app="AAC" ng-controller="BoardController">
 
-    <ion-pane>
+  <body ng-app="AAC" ng-controller="BoardController">
+    <ion-view view-title="AAC">
+      <ion-content style="background:#50E2E3;">
+        <div class="bar bar-header bar-dark">
+          <h1 class="title">Placeholder</h1>
+        </div>
+      </ion-content>
+    </ion-view>
+
+    <!-- <ion-pane>
       <ion-header-bar class="bar-stable">
         <h1 class="title">TITLE - {{ title }}</h1>
       </ion-header-bar>
@@ -31,6 +39,6 @@
           <img src="img/symbols/a_lot.png"><br>
         </span>
       </ion-content>
-    </ion-pane>
+    </ion-pane> -->
   </body>
 </html>
