--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -47,15 +47,40 @@
       <ion-content style="background: #50E2E3">
 
         <div class="row">
-          <div class="col col-10" style="background:#008485; height: 600px;">
+          <div class="col col-10" style="background:#008485; height: 635px;">
             <img src="img/AAC_assets/avatar_default.png"/>
+
+            <div class="regulars">
+              Yes
+            </div>
+
+            <div class="regulars">
+              No
+            </div>
+
+            <div class="regulars">
+              Hold On
+            </div>
+
+            <div class="regulars">
+              Help
+            </div>
           </div>
 
           <div class="col col-90">
             <div class="word-builder">
               <img src="img/AAC_assets/delete_button.png"/>
             </div>
-          
+
+            <!-- <div class="col col-40" style="float:left; margin-left:5px;">
+              <div class="boards">Placeholder</div>
+              <div class="boards">Placeholder</div>
+              <div class="boards">Placeholder</div>
+              <div class="boards">Placeholder</div>
+              <div class="boards">Placeholder</div>
+              <div class="boards">Placeholder</div>
+            </div> -->
+
             <div class="col col-60">
               <div class="tile">Placeholder</div>
               <div class="tile">Placeholder</div>
@@ -99,15 +124,6 @@
               <div class="tile">Placeholder</div>
               <div class="tile">Placeholder</div> -->
             </div>
-
-           <!--  <div class="col col-40" style="float:left; margin-left:5px;">
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-            </div> -->
           </div>
 
           <div class="col">
@@ -115,7 +131,6 @@
             <img src="img/AAC_assets/right.png"/>
             <img src="img/AAC_assets/tile_tapped_slice.png"/>
           </div>
-
         </div>
 
 <!-- Bottom function buttons -->
