readded css and added word-builder bar

--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -44,8 +44,7 @@
     </ion-header-bar>
 
     <ion-view view-title="AAC" class="pane">
-      <ion-content style="background: #50E2E3">
-
+      <ion-content class= "appBody">
         <div class="row">
           <div class="col col-10" style="background:#008485; height: 635px;">
             <img src="img/AAC_assets/avatar_default.png"/>
@@ -69,7 +68,7 @@
 
           <div class="col col-90">
             <div class="word-builder">
-              <img src="img/AAC_assets/delete_button.png"/>
+              <div class="word-builder-input"><img src="img/AAC_assets/delete_button.png" style="float:right; margin-top:12px;"/></div>
             </div>
 
             <!-- <div class="col col-40" style="float:left; margin-left:5px;">
@@ -81,7 +80,7 @@
               <div class="boards">Placeholder</div>
             </div> -->
 
-            <div class="col col-60">
+            <div class="col col-60" style="margin-top:-35px;">
               <div class="tile">Placeholder</div>
               <div class="tile">Placeholder</div>
               <div class="tile">Placeholder</div>
@@ -111,13 +110,13 @@
               <div class="tile">Placeholder</div>
 
               <div class="tile">Placeholder</div>
+              <div class="tile">Placeholder</div>
+              <div class="tile">Placeholder</div>
+              <div class="tile">Placeholder</div>
+              <div class="tile">Placeholder</div>
+              <div class="tile">Placeholder</div>
+
               <!-- <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-
-              <div class="tile">Placeholder</div>
               <div class="tile">Placeholder</div>
               <div class="tile">Placeholder</div>
               <div class="tile">Placeholder</div>
