--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -46,7 +46,7 @@
     <ion-view view-title="AAC" class="pane">
       <ion-content class= "appBody">
         <div class="row">
-          <div class="col col-10" style="background:#008485; height: 635px;">
+          <div class="col col-10" style="background:#008485; height: 645px;">
             <img src="img/AAC_assets/avatar_default.png"/>
 
             <div class="regulars">
@@ -68,60 +68,83 @@
 
           <div class="col col-90">
             <div class="word-builder">
-              <div class="word-builder-input"><img src="img/AAC_assets/delete_button.png" style="float:right; margin-top:12px;"/></div>
+              <div class="word-builder-input" style="margin-left:-15px"><img src="img/AAC_assets/delete_button.png" style="float:right; margin-top:12px;"/></div>
             </div>
 
-            <!-- <div class="col col-40" style="float:left; margin-left:5px;">
-              <div class="boards">Placeholder</div>
-              <div class="boards">Placeholder</div>
-              <div class="boards">Placeholder</div>
-              <div class="boards">Placeholder</div>
-              <div class="boards">Placeholder</div>
-              <div class="boards">Placeholder</div>
-            </div> -->
+            <div class="col col-60" style="margin-top:-35px; float:left;">
+              <div class="tile">Tile</div>
+              <div class="tile">Tile</div>
+              <div class="tile">Tile</div>
+              <div class="tile">Tile</div>
+              <div class="tile">Tile</div>
+              <div class="tile">Tile</div>
 
-            <div class="col col-60" style="margin-top:-35px;">
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
+              <div class="tile">Tile</div>
+              <div class="tile">Tile</div>
+              <div class="tile">Tile</div>
+              <div class="tile">Tile</div>
+              <div class="tile">Tile</div>
+              <div class="tile">Tile</div>
 
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
+              <div class="tile">Tile</div>
+              <div class="tile">Tile</div>
+              <div class="tile">Tile</div>
+              <div class="tile">Tile</div>
+              <div class="tile">Tile</div>
+              <div class="tile">Tile</div>
 
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
+              <div class="tile">Tile</div>
+              <div class="tile">Tile</div>
+              <div class="tile">Tile</div>
+              <div class="tile">Tile</div>
+              <div class="tile">Tile</div>
+              <div class="tile">Tile</div>
 
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
+              <div class="tile">Tile</div>
+              <div class="tile">Tile</div>
+              <div class="tile">Tile</div>
+              <div class="tile">Tile</div>
+              <div class="tile">Tile</div>
+              <div class="tile">Tile</div>
 
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
+              <div class="tile">Tile</div>
+              <div class="tile">Tile</div>
+              <div class="tile">Tile</div>
+              <div class="tile">Tile</div>
+              <div class="tile">Tile</div>
+              <div class="tile">Tile</div>
+            </div>
 
-              <!-- <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div>
-              <div class="tile">Placeholder</div> -->
+            <div class="col col-40" style="margin-top:-35px;float:left; margin-right:-20px;">
+              <div class="boards">Board</div>
+              <div class="boards">Board</div>
+              <div class="boards">Board</div>
+              <div class="boards">Board</div>
+
+              <div class="boards">Board</div>
+              <div class="boards">Board</div>
+              <div class="boards">Board</div>
+              <div class="boards">Board</div>
+
+              <div class="boards">Board</div>
+              <div class="boards">Board</div>
+              <div class="boards">Board</div>
+              <div class="boards">Board</div>
+
+              <div class="boards">Board</div>
+              <div class="boards">Board</div>
+              <div class="boards">Board</div>
+              <div class="boards">Board</div>
+
+              <div class="boards">Board</div>
+              <div class="boards">Board</div>
+              <div class="boards">Board</div>
+              <div class="boards">Board</div>
+
+              <div class="boards">Board</div>
+              <div class="boards">Board</div>
+              <div class="boards">Board</div>
+              <div class="boards">Board</div>
             </div>
           </div>
 
@@ -139,15 +162,15 @@
           </div>
 
           <div class="col col-60">
-            <img src="img/AAC_assets/sound_fx_icon.png"/>
-            <img src="img/AAC_assets/choose_colors_button.png"/>
-            <img src="img/AAC_assets/avatar_button.png"/>
-            <img src="img/AAC_assets/turn_on_chat.png"/>
+            <img src="img/AAC_assets/sound_fx_icon.png" style="margin-left:20px;"/>
+            <img src="img/AAC_assets/choose_colors_button.png" style="margin-left:20px;"/>
+            <img src="img/AAC_assets/avatar_button.png" style="margin-left:20px;"/>
+            <img src="img/AAC_assets/turn_on_chat.png" style="margin-left:20px;"/>
           </div>
 
           <div class="col col-30">
-            <img src="img/AAC_assets/left.png"/>
-            <img src="img/AAC_assets/right.png"/>
+            <img src="img/AAC_assets/left.png" style="margin-left:20px;"/>
+            <img src="img/AAC_assets/right.png" style="margin-left:20px;"/>
           </div>
         </div>
 
