--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -46,7 +46,7 @@
     <ion-view view-title="AAC" class="pane">
       <ion-content class= "appBody">
         <div class="row">
-          <div class="col col-10" style="background:#008485; height: 645px;">
+          <div class="col col-10" style="background:#008485; height: 620px;">
             <img src="img/AAC_assets/avatar_default.png"/>
 
             <div class="regulars">
@@ -71,7 +71,7 @@
               <div class="word-builder-input" style="margin-left:-15px"><img src="img/AAC_assets/delete_button.png" style="float:right; margin-top:12px;"/></div>
             </div>
 
-            <div class="col col-60" style="margin-top:-35px; float:left;">
+            <div class="col col-60" style="margin-top:-35px; float:left; border-right: 2px solid #ffffff;">
               <div class="tile">Tile</div>
               <div class="tile">Tile</div>
               <div class="tile">Tile</div>
