fixed styling on buttons (inline again)

--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -24,29 +24,29 @@
 
   <body ng-app="AAC" ng-controller="BoardController">
 
-    <ion-header-bar class="bar-dark">
-      <button class="button button-outline button-calm button-small">
+    <ion-header-bar class="bar-dark" style="margin:0 auto">
+      <button class="button button-outline button-calm button-small" style="border-color:#50E2E3;color:#50E2E3; border-radius:0; margin-left:8px;">
         <i class="icon ion-gear-b"></i> Settings
       </button>
-      <button class="button button-outline button-calm button-small">
+      <button class="button button-outline button-calm button-small" style="border-color:#50E2E3; color:#50E2E3; border-radius:0; margin-left:8px;">
         <i class="icon ion-edit"></i> Show/Hide Tiles
       </button>
-      <button class="button button-outline button-calm button-small">
+      <button class="button button-outline button-calm button-small" style="border-color:#50E2E3; color:#50E2E3; border-radius:0; margin-left:8px;">
         <i class="icon ion-ios-chatbubble"></i> Buddy Options 
         <!-- <span class="item item-toggle">
           LOCKED<label class="toggle toggle-assertive"><input type="checkbox">
           <div class="track"></div>></label>
         </span> -->
       </button>
-      <button class="button button-outline button-calm button-small">
+      <button class="button button-outline button-calm button-small" style="border-color:#50E2E3; color:#50E2E3; border-radius:0; margin-left:8px;">
         <i class="icon ion-android-search"></i> Search
       </button>
     </ion-header-bar>
 
     <ion-view view-title="AAC" class="pane">
-      <ion-content class= "appBody">
-        <div class="row">
-          <div class="col col-10" style="background:#008485; height: 620px;">
+      <ion-content class= "appBody" style="background:#008485;">
+        <div class="row" style="margin:0; padding:0;">
+          <div class="col col-10" style="height: 620px;">
             <img src="img/AAC_assets/avatar_default.png"/>
 
             <div class="regulars">
@@ -66,7 +66,7 @@
             </div>
           </div>
 
-          <div class="col col-90">
+          <div class="col col-90" style="background: #50E2E3;">
             <div class="word-builder">
               <div class="word-builder-input" style="margin-left:-15px"><img src="img/AAC_assets/delete_button.png" style="float:right; margin-top:12px;"/></div>
             </div>
@@ -148,7 +148,7 @@
             </div>
           </div>
 
-          <div class="col">
+          <div class="col" style="background: #50E2E3;">
             <img src="img/AAC_assets/left.png"/>
             <img src="img/AAC_assets/right.png"/>
             <img src="img/AAC_assets/tile_tapped_slice.png"/>
@@ -156,8 +156,8 @@
         </div>
 
 <!-- Bottom function buttons -->
-        <div class="row">
-          <div class="col col-10" style="background:white;">
+        <div class="row" style="background:#50E2E3; padding:0">
+          <div class="col col-10" style="background:white; margin:0">
             <img src="img/AAC_assets/home_icon.png"/>
           </div>
 
