got rid of corner on boards

--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -116,35 +116,35 @@
             </div>
 
             <div class="col col-40" style="margin-top:-35px;float:left; margin-right:-20px;">
-              <div class="boards">Board</div>
-              <div class="boards">Board</div>
-              <div class="boards">Board</div>
-              <div class="boards">Board</div>
+              <div class="boards">Board <div class="triangle-topright"></div></div>
+              <div class="boards">Board <div class="triangle-topright"></div></div>
+              <div class="boards">Board <div class="triangle-topright"></div></div>
+              <div class="boards">Board <div class="triangle-topright"></div></div>
 
-              <div class="boards">Board</div>
-              <div class="boards">Board</div>
-              <div class="boards">Board</div>
-              <div class="boards">Board</div>
+              <div class="boards">Board <div class="triangle-topright"></div></div>
+              <div class="boards">Board <div class="triangle-topright"></div></div>
+              <div class="boards">Board <div class="triangle-topright"></div></div>
+              <div class="boards">Board <div class="triangle-topright"></div></div>
 
-              <div class="boards">Board</div>
-              <div class="boards">Board</div>
-              <div class="boards">Board</div>
-              <div class="boards">Board</div>
+              <div class="boards">Board <div class="triangle-topright"></div></div>
+              <div class="boards">Board <div class="triangle-topright"></div></div>
+              <div class="boards">Board <div class="triangle-topright"></div></div>
+              <div class="boards">Board <div class="triangle-topright"></div></div>
 
-              <div class="boards">Board</div>
-              <div class="boards">Board</div>
-              <div class="boards">Board</div>
-              <div class="boards">Board</div>
+              <div class="boards">Board <div class="triangle-topright"></div></div>
+              <div class="boards">Board <div class="triangle-topright"></div></div>
+              <div class="boards">Board <div class="triangle-topright"></div></div>
+              <div class="boards">Board <div class="triangle-topright"></div></div>
 
-              <div class="boards">Board</div>
-              <div class="boards">Board</div>
-              <div class="boards">Board</div>
-              <div class="boards">Board</div>
+              <div class="boards">Board <div class="triangle-topright"></div></div>
+              <div class="boards">Board <div class="triangle-topright"></div></div>
+              <div class="boards">Board <div class="triangle-topright"></div></div>
+              <div class="boards">Board <div class="triangle-topright"></div></div>
 
-              <div class="boards">Board</div>
-              <div class="boards">Board</div>
-              <div class="boards">Board</div>
-              <div class="boards">Board</div>
+              <div class="boards">Board <div class="triangle-topright"></div></div>
+              <div class="boards">Board <div class="triangle-topright"></div></div>
+              <div class="boards">Board <div class="triangle-topright"></div></div>
+              <div class="boards">Board <div class="triangle-topright"></div></div>
             </div>
           </div>
 
