fixed the vertical rule issue

--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -73,12 +73,13 @@
             </div>
           </div>
 
-          <div class="col col-90" style="background: #50E2E3;">
+          <div class="col col-90" id="full-body">
             <div class="word-builder">
               <div class="word-builder-input" style="margin-left:-15px"><img src="img/AAC_assets/delete_button.png" id="home-section"/></div>
             </div>
 
             <div class="col col-60" id="tile-section">
+            <div class="tile-section-border">
               <div class="tile">Tile</div>
               <div class="tile">Tile</div>
               <div class="tile">Tile</div>
@@ -121,6 +122,8 @@
               <div class="tile">Tile</div>
               <div class="tile">Tile</div>
             </div>
+            </div>
+            <!-- <div class="col col-2" style="float:left;"></div> -->
 
             <div class="col col-40" id="board-section">
               <div class="boards">Board <div class="triangle-topright"></div></div>
