--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -126,35 +126,127 @@
             <!-- <div class="col col-2" style="float:left;"></div> -->
 
             <div class="col col-40" id="board-section">
-              <div class="boards">Board <div class="triangle-topright"></div></div>
-              <div class="boards">Board <div class="triangle-topright"></div></div>
-              <div class="boards">Board <div class="triangle-topright"></div></div>
-              <div class="boards">Board <div class="triangle-topright"></div></div>
+              <div class="boards">Board 
+                <div class="triangle-topright"></div>
+                <div class="boardline"></div>
+              </div>
 
-              <div class="boards">Board <div class="triangle-topright"></div></div>
-              <div class="boards">Board <div class="triangle-topright"></div></div>
-              <div class="boards">Board <div class="triangle-topright"></div></div>
-              <div class="boards">Board <div class="triangle-topright"></div></div>
+              <div class="boards">Board 
+                <div class="triangle-topright"></div>
+                <div class="boardline"></div>
+              </div>
 
-              <div class="boards">Board <div class="triangle-topright"></div></div>
-              <div class="boards">Board <div class="triangle-topright"></div></div>
-              <div class="boards">Board <div class="triangle-topright"></div></div>
-              <div class="boards">Board <div class="triangle-topright"></div></div>
+              <div class="boards">Board 
+                <div class="triangle-topright"></div>
+                <div class="boardline"></div>
+              </div>
+              <div class="boards">Board 
+                <div class="triangle-topright"></div>
+                <div class="boardline"></div>
+              </div>
 
-              <div class="boards">Board <div class="triangle-topright"></div></div>
-              <div class="boards">Board <div class="triangle-topright"></div></div>
-              <div class="boards">Board <div class="triangle-topright"></div></div>
-              <div class="boards">Board <div class="triangle-topright"></div></div>
+              <div class="boards">Board 
+                <div class="triangle-topright"></div>
+                <div class="boardline"></div>
+              </div>
 
-              <div class="boards">Board <div class="triangle-topright"></div></div>
-              <div class="boards">Board <div class="triangle-topright"></div></div>
-              <div class="boards">Board <div class="triangle-topright"></div></div>
-              <div class="boards">Board <div class="triangle-topright"></div></div>
+              <div class="boards">Board 
+                <div class="triangle-topright"></div>
+                <div class="boardline"></div>
+              </div>
 
-              <div class="boards">Board <div class="triangle-topright"></div></div>
-              <div class="boards">Board <div class="triangle-topright"></div></div>
-              <div class="boards">Board <div class="triangle-topright"></div></div>
-              <div class="boards">Board <div class="triangle-topright"></div></div>
+              <div class="boards">Board 
+                <div class="triangle-topright"></div>
+                <div class="boardline"></div>
+              </div>
+
+              <div class="boards">Board 
+                <div class="triangle-topright"></div>
+                <div class="boardline"></div>
+              </div>
+
+
+              <div class="boards">Board 
+                <div class="triangle-topright"></div>
+                <div class="boardline"></div>
+              </div>
+
+              <div class="boards">Board 
+                <div class="triangle-topright"></div>
+                <div class="boardline"></div>
+              </div>
+              <div class="boards">Board 
+                <div class="triangle-topright"></div>
+                <div class="boardline"></div>
+              </div>
+
+              <div class="boards">Board 
+                <div class="triangle-topright"></div>
+                <div class="boardline"></div>
+              </div>
+
+              <div class="boards">Board 
+                <div class="triangle-topright"></div>
+                <div class="boardline"></div>
+              </div>
+
+              <div class="boards">Board 
+                <div class="triangle-topright"></div>
+                <div class="boardline"></div>
+              </div>
+
+              <div class="boards">Board 
+                <div class="triangle-topright"></div>
+                <div class="boardline"></div>
+              </div>
+
+              <div class="boards">Board 
+                <div class="triangle-topright"></div>
+                <div class="boardline"></div>
+              </div>
+
+
+              <div class="boards">Board 
+                <div class="triangle-topright"></div>
+                <div class="boardline"></div>
+              </div>
+
+              <div class="boards">Board 
+                <div class="triangle-topright"></div>
+                <div class="boardline"></div>
+              </div>
+
+              <div class="boards">Board 
+                <div class="triangle-topright"></div>
+                <div class="boardline"></div>
+              </div>
+
+              <div class="boards">Board 
+                <div class="triangle-topright"></div>
+                <div class="boardline"></div>
+              </div>
+
+
+              <div class="boards">Board 
+                <div class="triangle-topright"></div>
+                <div class="boardline"></div>
+              </div>
+
+              <div class="boards">Board 
+                <div class="triangle-topright"></div>
+                <div class="boardline"></div>
+              </div>
+
+              <div class="boards">Board 
+                <div class="triangle-topright"></div>
+                <div class="boardline"></div>
+              </div>
+
+              <div class="boards">Board 
+                <div class="triangle-topright"></div>
+                <div class="boardline"></div>
+              </div>
+
             </div>
           </div>
 
