--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -69,47 +69,11 @@
 
             <div class="col col-60" id="tile-section">
             <div class="tile-section-border">
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
+              <div class="tile" 
+                ng-repeat="word in board.gridslot_set track by $index"> 
+                <img 
+                src="{{ word.symbol.masterlexeme_set[0].symbol.image }}"
+                style="height:60px; width:60px"></div>
             </div>
             </div>
             <!-- <div class="col col-2" style="float:left;"></div> -->
