--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -71,11 +71,14 @@
             <div class="tile-section-border">
               <div class="row" 
                 ng-repeat="row in rows">
-                <div class="tile" 
-                ng-repeat="word in board.gridslot_set track by $index"> 
-                <img 
-                src="{{ word.symbol.masterlexeme_set[0].symbol.image }}"
-                style="height:60px; width:60px"></div>
+                <div class="tile" ng-repeat="col in columns">
+                  <!-- {{col}}{{row}} -->
+                  <span ng-show="filled_tiles.indexOf(col+row)!=-1">
+                  {{ board.symbols[col+row].word }}<br>
+                  <img src = "{{board.symbols[col+row].symbol.image}}"
+                    style="width:40px;height:40px">
+                  </span>
+                </div>
             </div>
             </div>
             <!-- <div class="col col-2" style="float:left;"></div> -->
