taking a break from debugging done button

--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -297,7 +297,11 @@
             <h1 class="title"><strong>Pick a favorite color for your app!</strong></h1>
 
             <div class="color-choice" ng-repeat="title in colorName">{{title.colorTitle}}</div>
+
           </div>
+
+          <div class="round-button" ng-click="doneCancel()">Done</div>
+          <div class="round-button2">Cancel<a href=""></a></div>
         </ion-content>
       </div>
     </script>
