loaded data as json objects to boards controller section

--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -126,47 +126,12 @@
             <!-- <div class="col col-2" style="float:left;"></div> -->
 
             <div class="col col-40" id="board-section">
-              <div class="boards">Board 
+              <div class="boards" ng-repeat="board in dummyBoards">{{board.name}}
                 <div class="triangle-topright"></div>
                 <div class="boardline"></div>
               </div>
 
-              <div class="boards">Board 
-                <div class="triangle-topright"></div>
-                <div class="boardline"></div>
-              </div>
-
-              <div class="boards">Board 
-                <div class="triangle-topright"></div>
-                <div class="boardline"></div>
-              </div>
-              <div class="boards">Board 
-                <div class="triangle-topright"></div>
-                <div class="boardline"></div>
-              </div>
-
-              <div class="boards">Board 
-                <div class="triangle-topright"></div>
-                <div class="boardline"></div>
-              </div>
-
-              <div class="boards">Board 
-                <div class="triangle-topright"></div>
-                <div class="boardline"></div>
-              </div>
-
-              <div class="boards">Board 
-                <div class="triangle-topright"></div>
-                <div class="boardline"></div>
-              </div>
-
-              <div class="boards">Board 
-                <div class="triangle-topright"></div>
-                <div class="boardline"></div>
-              </div>
-
-
-              <div class="boards">Board 
+              <!-- <div class="boards">Board 
                 <div class="triangle-topright"></div>
                 <div class="boardline"></div>
               </div>
@@ -200,11 +165,25 @@
                 <div class="boardline"></div>
               </div>
 
+
               <div class="boards">Board 
                 <div class="triangle-topright"></div>
                 <div class="boardline"></div>
               </div>
 
+              <div class="boards">Board 
+                <div class="triangle-topright"></div>
+                <div class="boardline"></div>
+              </div>
+              <div class="boards">Board 
+                <div class="triangle-topright"></div>
+                <div class="boardline"></div>
+              </div>
+
+              <div class="boards">Board 
+                <div class="triangle-topright"></div>
+                <div class="boardline"></div>
+              </div>
 
               <div class="boards">Board 
                 <div class="triangle-topright"></div>
@@ -247,13 +226,34 @@
                 <div class="boardline"></div>
               </div>
 
+
+              <div class="boards">Board 
+                <div class="triangle-topright"></div>
+                <div class="boardline"></div>
+              </div>
+
+              <div class="boards">Board 
+                <div class="triangle-topright"></div>
+                <div class="boardline"></div>
+              </div>
+
+              <div class="boards">Board 
+                <div class="triangle-topright"></div>
+                <div class="boardline"></div>
+              </div>
+
+              <div class="boards">Board 
+                <div class="triangle-topright"></div>
+                <div class="boardline"></div>
+              </div> -->
+ 
             </div>
           </div>
 
           <div class="col" style="background: #50E2E3;">
             <img src="img/AAC_assets/left.png"/>
             <img src="img/AAC_assets/right.png"/>
-            <img src="img/AAC_assets/tile_tapped_slice.png"/>
+            <!-- <img src="img/AAC_assets/tile_tapped_slice.png"/> -->
           </div>
         </div>
 
