populated entire board menu with temporary imgs and category names

--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -129,6 +129,7 @@
               <div class="boards" ng-repeat="board in dummyBoards">{{board.name}}
                 <div class="triangle-topright"></div>
                 <div class="boardline"></div>
+                <img ng-src="{{board.img_path}}" alt="image" style="width:65%; height:65%;">
               </div>
 
               <!-- <div class="boards">Board 
