--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -126,128 +126,12 @@
             <!-- <div class="col col-2" style="float:left;"></div> -->
 
             <div class="col col-40" id="board-section">
-              <div class="boards" ng-repeat="board in dummyBoards">{{board.name}}
+              <div class="boards" ng-repeat="board in dummyBoards">
                 <div class="triangle-topright"></div>
-                <div class="boardline"></div>
-                <img ng-src="{{board.img_path}}" alt="image" style="width:65%; height:65%;">
+                <!-- <div class="boardline"></div> -->
+                <img ng-src="{{board.img_path}}" alt="image" style="width:65%; height:65%; margin-top: -25%; padding-left:10%;">
+                <p style="margin-top:-10%;">{{board.name}}</p>
               </div>
-
-              <!-- <div class="boards">Board 
-                <div class="triangle-topright"></div>
-                <div class="boardline"></div>
-              </div>
-
-              <div class="boards">Board 
-                <div class="triangle-topright"></div>
-                <div class="boardline"></div>
-              </div>
-              <div class="boards">Board 
-                <div class="triangle-topright"></div>
-                <div class="boardline"></div>
-              </div>
-
-              <div class="boards">Board 
-                <div class="triangle-topright"></div>
-                <div class="boardline"></div>
-              </div>
-
-              <div class="boards">Board 
-                <div class="triangle-topright"></div>
-                <div class="boardline"></div>
-              </div>
-
-              <div class="boards">Board 
-                <div class="triangle-topright"></div>
-                <div class="boardline"></div>
-              </div>
-
-              <div class="boards">Board 
-                <div class="triangle-topright"></div>
-                <div class="boardline"></div>
-              </div>
-
-
-              <div class="boards">Board 
-                <div class="triangle-topright"></div>
-                <div class="boardline"></div>
-              </div>
-
-              <div class="boards">Board 
-                <div class="triangle-topright"></div>
-                <div class="boardline"></div>
-              </div>
-              <div class="boards">Board 
-                <div class="triangle-topright"></div>
-                <div class="boardline"></div>
-              </div>
-
-              <div class="boards">Board 
-                <div class="triangle-topright"></div>
-                <div class="boardline"></div>
-              </div>
-
-              <div class="boards">Board 
-                <div class="triangle-topright"></div>
-                <div class="boardline"></div>
-              </div>
-
-              <div class="boards">Board 
-                <div class="triangle-topright"></div>
-                <div class="boardline"></div>
-              </div>
-
-              <div class="boards">Board 
-                <div class="triangle-topright"></div>
-                <div class="boardline"></div>
-              </div>
-
-              <div class="boards">Board 
-                <div class="triangle-topright"></div>
-                <div class="boardline"></div>
-              </div>
-
-
-              <div class="boards">Board 
-                <div class="triangle-topright"></div>
-                <div class="boardline"></div>
-              </div>
-
-              <div class="boards">Board 
-                <div class="triangle-topright"></div>
-                <div class="boardline"></div>
-              </div>
-
-              <div class="boards">Board 
-                <div class="triangle-topright"></div>
-                <div class="boardline"></div>
-              </div>
-
-              <div class="boards">Board 
-                <div class="triangle-topright"></div>
-                <div class="boardline"></div>
-              </div>
-
-
-              <div class="boards">Board 
-                <div class="triangle-topright"></div>
-                <div class="boardline"></div>
-              </div>
-
-              <div class="boards">Board 
-                <div class="triangle-topright"></div>
-                <div class="boardline"></div>
-              </div>
-
-              <div class="boards">Board 
-                <div class="triangle-topright"></div>
-                <div class="boardline"></div>
-              </div>
-
-              <div class="boards">Board 
-                <div class="triangle-topright"></div>
-                <div class="boardline"></div>
-              </div> -->
- 
             </div>
           </div>
 
@@ -297,7 +181,8 @@
           <div class="modal-container">
             <h1 class="title"><strong>Pick a favorite color for your app!</strong></h1>
 
-            <div class="color-choice" ng-repeat="title in colorName">{{title.colorTitle}}</div>
+            <div class="color-choice" ng-repeat="title in colorName">{{title.colorTitle}}
+            <img ng-src="{{title.url}}" alt="image" style="width:70%; height:70%;" /></div>
 
           </div>
 
