got background to change to black

--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -181,13 +181,13 @@
           <div class="modal-container">
             <h1 class="title"><strong>Pick a favorite color for your app!</strong></h1>
 
-            <div class="color-choice" ng-repeat="title in colorName">{{title.colorTitle}}
+            <div class="color-choice" ng-repeat="title in colorName" ng-click="colorSelect($index)" ng-class="{selectedColor:$index==selectedIndex}">{{title.colorTitle}}
             <img ng-src="{{title.url}}" alt="image" style="width:70%; height:70%;" /></div>
 
           </div>
 
-          <div class="round-button" ng-click="doneCancel()">Done</div>
-          <div class="round-button2">Cancel<a href=""></a></div>
+          <div class="round-button">Done</div>
+          <div class="round-button2" ng-click="closeModal()">Cancel<a href=""></a></div>
         </ion-content>
       </div>
     </script>
