got quickbar background color to change

--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -186,8 +186,8 @@
 
           </div>
 
-          <div class="round-button">Done</div>
-          <div class="round-button2" ng-click="closeModal()">Cancel<a href=""></a></div>
+          <div class="round-button" ng-click="changeBackground()">Done</div>
+          <div class="round-button2" ng-click="closeModal()">Cancel</div>
         </ion-content>
       </div>
     </script>
