--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -127,15 +127,17 @@
             </div>
             <!-- <div class="col col-2" style="float:left;"></div> -->
 
-            <div class="col col-40" id="board-section">
+            <div class="col col-40" id="board-section" style="margin-top:-43px;">
               <div class="boards" ng-repeat="board in dummyBoards">
                 <!-- <div class="triangle-topright"></div> -->
                 <!-- <div class="boardline"></div> -->
-                <div class="top-content" style="position: relative; z-index:2;">
-                  <img ng-src="{{board.img_path}}" alt="image" style="width:80%; height:80%;">
-                  <p style="margin-top:-10%;">{{board.name}}</p>
-                </div>
-                <img src="img/new_dev_assets/board_tile_notched_default.svg" alt="board tile" style="position: absolute;">
+                <!-- <div class="top-content" style="position: relative; z-index:2;"> -->
+                  <img ng-src="{{board.img_path}}" alt="image" style="width:65%; height:65%; position:relative; z-index:2; margin-bottom:-60px;"\>
+
+                  <img src="img/new_dev_assets/board_tile_notched_default.svg" style="positon:relative; z-index:0;" alt="board tile">
+          
+                  <p style="position:relative; z-index:3; margin-top:-30px">{{board.name}} </p>
+                <!-- </div> -->
               </div>
             </div>
           </div>
