--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -152,7 +152,7 @@
 <!-- Bottom function buttons -->
         <div class="row" id="btn-section">
           <div class="col col-10" id="home-button-section">
-            <div class="button-circle2">
+            <div id="button-circle2">
               <img src="img/new_dev_assets/home.png" style="margin-left:15px; margin-top:12px;" />
             </div>
           </div>
