--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -25,29 +25,17 @@
   <body ng-app="AAC" ng-controller="BoardController">
 
     <ion-header-bar class="bar-dark">
-      <button class="button button-outline button-calm button-small" id="btn-styling">
-        <i class="icon ion-gear-b"></i> Settings
-      </button>
-      <button class="button button-outline button-calm button-small" id="btn-styling">
-        <i class="icon ion-edit"></i> Show/Hide Tiles
-      </button>
-      <button class="button button-outline button-calm button-small item item-toggle" id="btn-styling-buddy">
-        <p><i class="icon ion-ios-chatbubble"></i> Buddy Options </p>
-
-        <!-- <span class="item item-toggle"> -->
-          <label class="toggle toggle-small toggle-assertive">
-            <input type="checkbox">
-            <div class="track">
-              <p>LOCKED</p>
-              <div class="handle"></div>
-            </div>
-          </label>
-        <!-- </span>
- -->
-      </button>
-      <button class="button button-outline button-calm button-small" id="btn-styling">
-        <i class="icon ion-android-search"></i> Search
-      </button>
+      <div class="buttonsdiv">
+        <button class="button button-outline button-calm button-small" id="btn-styling">
+          <i class="icon ion-gear-b"></i> Settings
+        </button>
+        <button class="button button-outline button-calm button-small" id="btn-styling">
+          <i class="icon ion-edit"></i> Show/Hide Tiles
+        </button>
+        <button class="button button-outline button-calm button-small item item-toggle" id="btn-styling">
+          <i class="icon ion-ios-chatbubble"></i> Board Factory
+        </button>
+      </div>
     </ion-header-bar>
 
     <ion-view view-title="AAC" class="pane">
