--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -23,8 +23,7 @@
   </head>
 
   <body ng-app="AAC" ng-controller="BoardController">
-
-    <!-- <ion-header-bar class="bar-dark">
+  <ion-header-bar class="bar-dark">
       <div class="buttonsdiv">
         <button class="button button-outline button-calm button-small" id="btn-styling">
           <a href=""><i class="icon ion-gear-b"></i> Settings</a>
@@ -115,30 +114,30 @@
             </div>
             <!-- <div class="col col-2" style="float:left;"></div> -->
 
-            <!-- <div class="col col-40" id="board-section" style="margin-top:-43px;">
-              <div class="boards" ng-repeat="board in dummyBoards"> -->
+            <div class="col col-40" id="board-section" style="margin-top:-43px;">
+              <div class="boards" ng-repeat="board in dummyBoards">
                 <!-- <div class="triangle-topright"></div> -->
                 <!-- <div class="boardline"></div> -->
                 <!-- <div class="top-content" style="position: relative; z-index:2;"> -->
-                  <!-- <img ng-src="{{board.img_path}}" alt="image" style="width:65%; height:65%; position:relative; z-index:2; margin-bottom:-60px;"\>
+                  <img ng-src="{{board.img_path}}" alt="image" style="width:65%; height:65%; position:relative; z-index:2; margin-bottom:-60px;"\>
 
                   <img src="img/new_dev_assets/board_tile_notched_default.svg" style="positon:relative; z-index:0;" alt="board tile">
           
                   <p style="position:relative; z-index:3; margin-top:-30px">{{board.name}} </p>
                 <!-- </div> -->
-              <!-- </div>
+              </div>
             </div>
-          </div> -->
+          </div>
 
-          <!-- <div class="col" style="background: #50E2E3;">
+          <div class="col" style="background: #50E2E3;">
             <img src="img/AAC_assets/left.png"/>
-            <img src="img/AAC_assets/right.png"/> -->
+            <img src="img/AAC_assets/right.png"/>
             <!-- <img src="img/AAC_assets/tile_tapped_slice.png"/> -->
-        <!--   </div>
-        </div> -->
+          </div>
+        </div>
 
 <!-- Bottom function buttons -->
-        <!-- <div class="row" id="btn-section">
+        <div class="row" id="btn-section">
           <div class="col col-10" id="home-button-section">
             <div id="button-circle2">
               <img src="img/new_dev_assets/home.png" style="margin-left:15px; margin-top:12px;" />
@@ -169,7 +168,7 @@
           </div>
         </div>
       </ion-content>
-    </ion-view> -->
+    </ion-view>
 
     <!-- <ion-pane>
       <ion-header-bar class="bar-stable">
@@ -183,21 +182,21 @@
       </ion-content>
     </ion-pane> -->
 
-    <!-- A SCRIPT TAG WAS HERE -->
-    //   <div class="modal" id="color-modal-style">
-    //     <ion-content>
-    //       <div class="modal-container">
-    //         <h1 class="title"><strong>Pick a favorite color for your app!</strong></h1>
+    <script id="contact-modal.html" type="text/ng-template">
+      <div class="modal" id="color-modal-style">
+        <ion-content>
+          <div class="modal-container">
+            <h1 class="title"><strong>Pick a favorite color for your app!</strong></h1>
 
-    //         <div class="color-choice" ng-repeat="title in colorName" ng-click="colorSelect($index)" ng-class="{selectedColor:$index==selectedIndex}">{{title.colorTitle}}
-    //         <img ng-src="{{title.url}}" alt="image" style="width:70%; height:70%;" /></div>
+            <div class="color-choice" ng-repeat="title in colorName" ng-click="colorSelect($index)" ng-class="{selectedColor:$index==selectedIndex}">{{title.colorTitle}}
+            <img ng-src="{{title.url}}" alt="image" style="width:70%; height:70%;" /></div>
 
-    //       </div>
+          </div>
 
-    //       <div class="round-button" ng-click="changeBackground()"><a href=";javascript"></a>Done</div>
-    //       <div class="round-button2" ng-click="closeModal()">Cancel</div>
-    //     </ion-content>
-    //   </div>
-    <!-- AN ENDING SCRIPT TAG WAS HERE -->
+          <div class="round-button" ng-click="changeBackground()"><a href=";javascript"></a>Done</div>
+          <div class="round-button2" ng-click="closeModal()">Cancel</div>
+        </ion-content>
+      </div>
+    </script>
   </body>
 </html>
