finally got router to work

--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -9,8 +9,7 @@
     <!-- compiled css output -->
     <!-- <link href="css/ionic.app.css" rel="stylesheet"> -->
     <link href="css/ionic.app.css" rel="stylesheet">
-    <link href="css/style.css"
-
+    <link href="css/style.css" rel="stylesheet">
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
@@ -22,7 +21,8 @@
     <script src="js/controllers/boards.js"></script>
   </head>
 
-  <body ng-app="AAC" ng-controller="BoardController">
+  <body ng-app="starter">
+    <ion-nav-view></ion-nav-view>
 
     <!-- <ion-header-bar class="bar-dark">
       <div class="buttonsdiv">
@@ -184,7 +184,7 @@
     </ion-pane> -->
 
     <!-- A SCRIPT TAG WAS HERE -->
-    //   <div class="modal" id="color-modal-style">
+   <!--  //   <div class="modal" id="color-modal-style">
     //     <ion-content>
     //       <div class="modal-container">
     //         <h1 class="title"><strong>Pick a favorite color for your app!</strong></h1>
@@ -197,7 +197,7 @@
     //       <div class="round-button" ng-click="changeBackground()"><a href=";javascript"></a>Done</div>
     //       <div class="round-button2" ng-click="closeModal()">Cancel</div>
     //     </ion-content>
-    //   </div>
+    //   </div> -->
     <!-- AN ENDING SCRIPT TAG WAS HERE -->
   </body>
 </html>
