We now make a call to the API to get a proper sentence.

--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -41,7 +41,8 @@
       <ion-content class= "appBody" id="bodyBack">
         <div class="row" id="regularRow">
           <div class="col col-10" id="regularRowBod">
-            <img src="img/AAC_assets/avatar_default.png"/>
+            <img src="img/AAC_assets/avatar_default.png"
+              ng-click="sayPhrase()"/>
 
             <div class="regulars">
               Yes
