--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -71,9 +71,9 @@
             <div class="tile-section-border">
               <span ng-repeat="row in rows">
 
-              <div class="tile" ng-repeat="col in columns">
+              <div class="tile" ng-repeat="col in columns" ng-click="chosenTile()">
                   <!-- {{col}}{{row}} -->
-                  <span ng-show="filled_tiles.indexOf(col+row)!=-1">
+                  <span ng-show="filled_tiles.indexOf(col+row)!=-1" ng-click="chosenTile()">
                   {{ board.symbols[col+row].word }}<br>
                   <img src = "{{board.symbols[col+row].symbol.image}}"
                     style="width:40px;height:40px">
