got placeholders in the correct original div

--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -161,12 +161,8 @@
 
             <div class="color-choice" ng-repeat="title in colorName" ng-click="colorSelect($index)" ng-class="{selectedColor:$index==selectedIndex}" id="container">{{title.colorTitle}}
 
-            <img ng-show="!inverse" ng-src="{{title.url}}" alt="image" style="width:70%; height:70%;" />
-            
-            <img ng-show="inverse" ng-src="{{title.placeholder}}" alt="image" style="width:70%; height:70%;" />
-
+              <img ng-src="{{title.url}}" alt="image" style="width:70%; height:70%;" />
             </div>
-
           </div>
 
           <div class="round-button" ng-click="changeBackground()"><a href=";javascript"></a>Done</div>
